# Software-Engineering-094219

Binary Search Tree HomeWork/: Node.h  Tree.h  main.cpp
DNA HomeWork/: CMakeLists.txt  input1.txt  input2.txt  input3.txt  main.cpp  output1.txt  output2.txt  output3.txt
Inputs_Outputs/: err1.txt
Zoo HomeWork/: Animal.cpp  Animal.h  CMakeLists.txt  Definitions.h  Duck.cpp  Duck.h  Elephant.cpp  Elephant.h  Lion.cpp  Lion.h  Mammoth.cpp  Mammoth.h  Proboscidea.cpp  Proboscidea.h  Zoo.cpp  Zoo.h  input1.txt  input2.txt  main.cpp  output1.txt  output2.txt
